* User classes that used visibility (public, protected, private) are now identified
as PHP 5.0.0 and no more as PHP 4.0.0
* Improved global results in a multiple data source context
* Add a warning message when --reference ALL used with extension detected but not loaded
* Add ability to exclude traits from parsing with the CLI tool and the XML configuration file

.Bug fixes:
* API getters gave wrong results when data source is list of files (directory)
* Avoid exception in all case when xml configuration location is not a file
* Avoid exception when a directory phpci exists in save_path cache file
* Force clean cache when --reference or --exclude-pattern changed. Avoid old results.


== Version 2.6.0 (2012-07-26)

.Versions summary:
* 2.6.0 support all PHP versions until 5.4.5
* 2.5.0 support all PHP versions until 5.4.4
* 2.4.0 support all PHP versions until 5.4.3
* 2.3.0 support all PHP versions until 5.4.0
* 2.2.0 support all PHP versions until 5.3.10
* 2.1.0 support all PHP versions until 5.3.8

.Additions and changes since 2.6.0RC1:
* fixed plural in the footer of all reports produced by CLI
* add namespace (when necessary) in XML report
* improved version detection of namespaces aliases uses in type hinting

.Additions and changes since 2.5.0:
* Users have now ability to use their own autoloader (related to issue GH-43)

.Bug fixes since 2.6.0RC1:
* fix references to latest version of branch PHP 5.3
* wrong namespace used for class when importing other namespaces (see PHP_Reflect 1.4.2)
* excludes callable type hint in additionnal class search

.Bug fixes since 2.5.0:
* GH-34 : Remove false positive on A::CONST_NAME
* GH-38 : type hinting in function prototype
* GH-39 : class not detected and bad version
* GH-40 : ambiguous class report
* GH-42 : Remove parameter versions from scandir()
* unit tests suites PHP 5.2 compatibility with source only parsable with PHP 5.3 or greater


== Version 2.6.0 RC1 (2012-07-23)

.Additions and changes: